# crypto_web

backend/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/server/: __main__.py
backend/server/config/: __init__.py  settings.py
backend/server/db/cache/: __init__.py  redis.py
backend/server/db/connection/: __init__.py  session.py
backend/server/db/migrator/: env.py
backend/server/db/migrator/versions/: 2023_02_10_1509-f5a78dbc58bc_.py  2023_02_18_1205-00dd51555e14_.py
backend/server/db/models/: __init__.py  user.py
backend/server/endpoints/: __init__.py  auth.py  data_encryption.py  key_exchange.py
backend/server/exceptions/: __init__.py  key.py  signature.py  user.py
backend/server/schemas/: __init__.py  data_encryption.py  key_exchange.py  signin.py  signup.py
backend/server/tools/: __init__.py  diffie_hellman.py  example_message.py  hash.py  rc4.py  rsa.py
backend/server/usecase/: __init__.py  authentication.py  code_generation.py  digital_signature.py  registration.py
frontend/: Makefile  index.js  message.html  signin.html  signup.html
frontend/js/: diffie_hellman.js  error.js  message.js  script.js  signin.js  signup.js  test_rc4.js
frontend/js/tools/: diffie_hellman.js  hash.js  local_storage.js  rc4.js  rsa.js  signature.js
