[tool.poetry]
name = "server"
version = "0.1.0"
description = "Project for Crypto Web Tech"
authors = ["Str1kez <vazinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.90.1"
pydantic = "^1.10.4"
sqlalchemy = "^2.0.3"
alembic = "^1.9.3"
asyncpg = "^0.27.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
psycopg2 = "^2.9.5"
python-multipart = "^0.0.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
known_local_folder = "server"
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true

